fix footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,16 @@ h1 {
 nav, footer {
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
+}
+
+nav {
   display: flex;
   justify-content: space-between;
+}
+
+
+footer {
+  text-align: center;
 }
 
 .nav-title {
